lintian (1.24.4) UNRELEASED; urgency=low

  * checks/scripts:
    + [ADB] Split the "read without variable or with invalid options" bashism
      test in two, thus enabling the checks to be more accurate and avoiding
      an uninitialized variable warning.  (Closes: #494450)
  * checks/shared-libs.desc:
    + [RA] Clarify that shlibs-declares-dependency-on-other-package can be
      issued for a version mismatch.  (Closes: #494400)

 --

lintian (1.24.3) unstable; urgency=low
  
  The "greetings from Argentina" release.

  * checks/binaries:
    + [ADB] Use Lintian::Collect throughout rather than reparsing file-info
      and objdump-info.
  * checks/changelog-file{,.desc}:
    + [ADB] Use Lintian::Collect instead of reading the fields/*, file-info
      and objdump-info files.
    + [ADB] Remove a misplaced word from the description of the tag
      "debian-changelog-file-contains-invalid-email-address".
  * checks/copyright-file{,.desc}:
    + [ADB] Drop the "copyright line too long" check.  Most of the issues
      it flags aren't easily fixable, particularly where the copyright file
      is (semi)automatically generated.  (Closes: #491302, #491365, #491685)
    + [ADB] Use Lintian::Collect for accessing control fields and reading the
      list of files in the package.
    + [ADB] Don't flag use of version 1 of the GPL, or licenses using phrases
      such as "compatible with the GPL" (for example, the W3C Software
      License) as missing a reference to common-licenses
    + [ADB] Replace references to the GPL in GFDL and LGPL related tags
      with the appropriate license.  Also remove a misplaced word.
  * checks/cruft:
    + [ADB] Use Lintian::Collect for accessing control fields
  * checks/debconf:
    + [ADB] Don't complain about unused debconf templates in udebs.
      (Closes: #491135)
    + [RA] Try to recognize at least some debconf template uses in Perl.
    + [ADB] Replace fields/* and scripts access with Lintian::Collect