@@ -1,0 +1,5 @@
+Testname: cruft-ancient-libtool-2
+Version: 1.0
+Description: Test that an old (1.5.2) ltmain.sh is detected correctly
+Test-For: ancient-libtool
+References: Debian Bug#293296
