@@ -1,0 +1,5 @@
+Testname: cruft-ancient-libtool
+Version: 1.0
+Description: Test that an very old ltmain.sh/ltconfig is detected correctly
+Test-For: ancient-libtool
+References: Debian Bug#293296
