@@ -1,0 +1,1 @@
+W: cruft-ancient-libtool-2 source: ancient-libtool ltmain.sh 1.5.2
