@@ -1,0 +1,2 @@
+W: cruft-ancient-libtool source: ancient-libtool ltconfig
+W: cruft-ancient-libtool source: ancient-libtool ltmain.sh 1.3.5
